# ProyectoIntegrador_A00841

./: CMakeLists.txt  Episodio.cpp  Episodio.h  Pelicula.cpp  Pelicula.h  README.md  Serie.cpp  Serie.h  Video.cpp  Video.h  main.cpp  sonar-project.properties  videos.csv
test/: test_Integracion.cpp  test_episodio.cpp  test_pelicula.cpp  test_serie.cpp
tests/: test_Integracion.cpp  test_episodio.cpp  test_limites.cpp  test_pelicula.cpp  test_serie.cpp
